--- a/style/navbar.css
+++ b/style/navbar.css
@@ -3,6 +3,10 @@
     padding: 0;
   }
   
+  body{
+    overflow-x:hidden;
+  }
+
   a {
     color: #fff;
     text-decoration: none;
@@ -26,6 +30,7 @@
     font-family: system-ui, -apple-system, Helvetica, Arial, sans-serif;
     background: #23232e;
     height: 8vh;
+    overflow: hidden;
   }
   
   .nav-list {
@@ -72,6 +77,8 @@
       justify-content: space-around;
       transform: translateX(100%);
       transition: transform 0.3s ease-in;
+      overflow-x: hidden;
+      display: none;
     }
     .nav-list li {
       margin-left: 0;
@@ -79,11 +86,13 @@
     }
     .mobile-menu {
       display: block;
+      overflow: hidden;
     }
   }
   
   .nav-list.active {
     transform: translateX(0);
+    display: flex;
   }
   
   @keyframes navLinkFade {
