--- a/style/habilidades.css
+++ b/style/habilidades.css
@@ -31,6 +31,35 @@ body{
         color:#03CFB0;
     }
 
+.habilidades{
+    width:400px; 
+    margin-top:30px; 
+    border-width:2px; 
+    border-style:solid;
+    border-color:#03CFB0; 
+    border-radius:3px;
+    display: none;
+}
+
+img{
+    margin-top:2vh
+}
+
 #div1{
     display:none;
+}
+
+ul{
+    margin-left: 4vh;
+}
+
+@media screen and (max-width:480px) and (min-width:320px){
+    /*Celular*/
+    img{
+        width: 40vh;
+    }
+
+    .habilidades{
+        width: 40vh;
+    }
 }
