--- a/style/index.css
+++ b/style/index.css
@@ -6,7 +6,7 @@ body{
 }
 
 .banner{
-    background-image: url(/img/fundo.jpg);
+    background-image: url(/img/fundo-otim.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     height: 50vh;
