Alteração banner mobile

--- a/style/index.css
+++ b/style/index.css
@@ -229,6 +229,7 @@ body{
     .banner{
         height: 100;
         filter: blur();
+        background-attachment:scroll;
     }
 
     .escrita{
