--- a/style/index.css
+++ b/style/index.css
@@ -158,6 +158,14 @@ body,html{
     width:80px;
 }
 
+.fundo{
+    background-color:#D9D9D9;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    height: 70vh;
+}
+
 .quadro1{
     margin-left:130px;
     margin-right:25px;
