--- a/style/index.css
+++ b/style/index.css
@@ -171,9 +171,17 @@ body,html{
     margin-left: 10vh;
 }
 
-.fundo h1{
+.fundo h1 h2{
     text-transform: uppercase;
     font-weight: bold;
+}
+
+.fundo p{
+    width: 40%;
+}
+
+.fundo img{
+    filter: drop-shadow(2px 2px 2px);
 }
 
 .apresentacao{
@@ -292,7 +300,7 @@ body,html{
     }
 
     .apresentacao{
-        height: 50vh;
+        height: 38vh;
     }
 
     .quadro{
@@ -324,6 +332,18 @@ body,html{
     }
     .quadro6{
         margin:auto;
+    }
+
+    .fundo .row{
+        margin-left: 0vh;
+    }
+
+    .fundo p{
+        width: 90%;
+    }
+
+    .imgLogosLing{
+        width: 10vh;
     }
     
     .precisa{
