--- a/style/index.css
+++ b/style/index.css
@@ -114,6 +114,7 @@ body,html{
     .apresentação-fullstack-opcoes:hover a{
         color: #03CFB0;
         text-decoration: underline;
+        transition: ease-in 0.2s;
     }
     .apresentação-fullstack-opcoes:hover img{
         width: 2.5rem;
