--- a/style/index.css
+++ b/style/index.css
@@ -176,11 +176,12 @@ body,html{
 
 .quadro{
     margin-top:100px;
-    margin:auto;
+    margin: auto;
     border-style:solid; 
     border-color:#03CFB0; 
     border-width:2px;
     width:244px;
+    height: 32rem;
 }
 /*        .quadro:hover{
     margin-top:50px;
