--- a/style/projetos.css
+++ b/style/projetos.css
@@ -1,13 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Secular+One&display=swap');
 
+*{
+    overflow-x: hidden;
+}
+
 body{
     background-color: #1A1A21;
     color: #FFF;
     font-family: 'Secular One', sans-serif;
 }
 
+h1{
+    overflow-y: hidden;
+}
+
 .container h3{
     margin-bottom: 1rem;
+    overflow-y: hidden;
 }
 .container img{
     width: 30em;
