--- a/style/index.css
+++ b/style/index.css
@@ -183,7 +183,7 @@ body,html{
     border-color:#03CFB0; 
     border-width:2px;
     width:244px;
-    height: 32rem;
+    height: 40rem;
 }
 /*        .quadro:hover{
     margin-top:50px;
@@ -207,6 +207,7 @@ body,html{
 }
 .botao_SaibaMais{
     width:80%;
+    margin-top: 3rem;
     margin-bottom:10px; 
     border-style:solid; 
     border-color:#03CFB0; 
@@ -329,39 +330,22 @@ body,html{
     border-radius:3px;
 }
 
-.orcamento:hover{
-    background-color:#00b4fc;
+form input[type="text"]{
+    width: 80%;
+    height: 4rem;
+    padding: 0.5rem;
+    margin-top: 0.8rem;
+    color: #333;
+    outline: none;
 }
-
-.precisa{
-    width:493px; 
-    height:215px; 
-    color:hsl(0, 50%, 50%); 
-    border-color:#00B4CC; 
-    border-style:solid;
-    border-radius:20px;
-    margin-top:70px;
-    font-family: 'Secular One', sans-serif;
-}
-.precisa h3{
-    text-transform:uppercase; 
-    text-align:center;
-    color:white; 
-    font-size:20px;
-    margin-top:40px;
-    margin-left:30px;
-    margin-right:30px;
-}
-.precisa a{
-    text-decoration:none;
-}
-.orcamento{
-    background-color:#386DBD; 
-    width:220px;
-    height:43px; 
-    margin-left:131px;
-    border-radius:30px; 
-    margin-top:30px;
+form input[type="submit"]{
+    width: 8rem;
+    height: 3rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    background-color: #03CFB0;
+    border: none;
+    border-radius: 0.1rem;
 }
 
 .fifth {
@@ -395,6 +379,17 @@ body,html{
 }
 .fifth:hover:after {
     width: 110%;
+}
+
+.formDiv1{
+    height: 33rem;
+    background-color: #222325d0; 
+    padding: 2rem;
+}
+.formDiv2{
+    height: 33rem;
+    background-color: #222325d0; 
+    padding: 2rem;
 }
 
 @media screen and (max-width:480px) and (min-width:320px){
@@ -516,6 +511,14 @@ body,html{
         height: 100%;
         padding-bottom: 2rem;
     }
+
+    .formDiv1{
+        height: 20rem;    
+    }
+    .formDiv2{
+        height: 35rem;
+        margin-bottom: 13rem;
+    }
 }
 
 @media screen and (min-width:481px) and (max-width:768px){
@@ -593,6 +596,10 @@ body,html{
         width:180px;
         height:40px;
         margin:auto;
+    }
+
+        .formDiv1{
+        height: 20rem;    
     }
 }
 
